Restaurant/force-app/main/default/objects/Transaction__c/fields/tip_amount__c.field-meta.xml
<CustomField>
    <fullName>tip_amount__c</fullName>
    <label>tip amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>