Restaurant/force-app/main/default/objects/Transaction__c/fields/tip_type__c.field-meta.xml
<CustomField>
    <fullName>tip_type__c</fullName>
    <description>cash or credit tip</description>
    <label>tip type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>tip__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>