Restaurant/force-app/main/default/objects/Transaction__c/validationRules/No_Past_Employee_Transactions.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Past_Employee_Transactions</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Employee__r.End_Employment_Date__c))</errorConditionFormula>
    <errorMessage>Can&apos;t create a transaction for an employee that no longer works here</errorMessage>
</ValidationRule>