Restaurant/force-app/main/default/objects/Transaction__c/listViews/detailed.listView-meta.xml
<ListView>
    <fullName>detailed</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Employee__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sale_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>detailed</label>
</ListView>