Restaurant/force-app/main/default/objects/Transaction__c/listViews/view_all.listView-meta.xml
<ListView>
    <fullName>view_all</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Employee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Meal__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>tip_type__c</columns>
    <columns>tip_amount__c</columns>
    <columns>tip__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>view all</label>
</ListView>